--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
                 <button class="answer" data-sound="sound9.mp3">Violin</button>
             </div>
         </div>
-        <div id="controls" style="display: none;">
+        <div id="controls">
             <button id="playSymphony">Play Symphony</button>
             <button id="stopSymphony">Stop Symphony</button>
         </div>
