--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
             <button id="stopSymphony">Stop Symphony</button>
         </div>
     </div>
-   import { PixelSorter } from "/scripts/pixel_sort.js"
+<link type="text/css" rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
 </body>
 </html>
