--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Symphony</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -34,7 +34,7 @@
             <button id="stopSymphony">Stop Symphony</button>
         </div>
     </div>
-<link type="text/css" rel="stylesheet" href="style.css" />
+
     <script src="script.js"></script>
 </body>
 </html>
