--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Symphony</title>
+    <title>Interactive Symphony with Squares</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+        #canvas {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -35,6 +52,8 @@
         </div>
     </div>
 
+    <canvas id="canvas"></canvas>
+    
     <script src="script.js"></script>
 </body>
 </html>
