--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
             width: 100%;
             height: 100%;
             z-index: -1;
+            display: none; /* Hide the canvas initially */
         }
     </style>
 </head>
@@ -29,21 +30,21 @@
         <div id="questions">
             <div class="question">
                 <p>1. Choose a mood:</p>
-                <button class="answer" data-sound="sound1.mp3">Happy</button>
-                <button class="answer" data-sound="sound2.mp3">Sad</button>
-                <button class="answer" data-sound="sound3.mp3">Excited</button>
+                <button class="answer" data-sound="sound1.mp3" data-property="color" data-value="red">Happy</button>
+                <button class="answer" data-sound="sound2.mp3" data-property="color" data-value="blue">Sad</button>
+                <button class="answer" data-sound="sound3.mp3" data-property="color" data-value="green">Excited</button>
             </div>
             <div class="question">
                 <p>2. Choose a tempo:</p>
-                <button class="answer" data-sound="sound4.mp3">Fast</button>
-                <button class="answer" data-sound="sound5.mp3">Moderate</button>
-                <button class="answer" data-sound="sound6.mp3">Slow</button>
+                <button class="answer" data-sound="sound4.mp3" data-property="speed" data-value="12">Fast</button>
+                <button class="answer" data-sound="sound5.mp3" data-property="speed" data-value="8">Moderate</button>
+                <button class="answer" data-sound="sound6.mp3" data-property="speed" data-value="4">Slow</button>
             </div>
             <div class="question">
                 <p>3. Choose an instrument:</p>
-                <button class="answer" data-sound="sound7.mp3">Piano</button>
-                <button class="answer" data-sound="sound8.mp3">Guitar</button>
-                <button class="answer" data-sound="sound9.mp3">Violin</button>
+                <button class="answer" data-sound="sound7.mp3" data-property="size" data-value="300">Piano</button>
+                <button class="answer" data-sound="sound8.mp3" data-property="size" data-value="240">Guitar</button>
+                <button class="answer" data-sound="sound9.mp3" data-property="size" data-value="180">Violin</button>
             </div>
         </div>
         <div id="controls" style="display: none;">
