--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,8 @@
         <div id="questions">
             <div class="question">
                 <p>1. Choose a mood:</p>
-                <button class="answer" data-sound="sound1.mp3" data-property="color" data-value="red">Happy</button>
-                <button class="answer" data-sound="sound2.mp3" data-property="color" data-value="blue">Sad</button>
+                <button class="answer" data-sound="fiddle.wav" data-property="color" data-value="red">Happy</button>
+                <button class="answer" data-sound="piano e.wav" data-property="color" data-value="blue">Sad</button>
                 <button class="answer" data-sound="sound3.mp3" data-property="color" data-value="green">Excited</button>
             </div>
             <div class="question">
