--- a/public/index.html
+++ b/public/index.html
@@ -30,21 +30,15 @@
         <div id="questions">
             <div class="question">
                 <p>1. Choose a mood:</p>
-                <button class="answer" data-sound="sound1.mp3" data-property="color" data-value="red">Happy</button>
-                <button class="answer" data-sound="sound2.mp3" data-property="color" data-value="blue">Sad</button>
-                <button class="answer" data-sound="sound3.mp3" data-property="color" data-value="green">Excited</button>
+                <button class="answer" data-sound1="sound1.mp3" data-sound2="sound2.mp3" data-sound3="sound3.mp3" data-property="color" data-value="red">Happy</button>
+                <button class="answer" data-sound1="sound4.mp3" data-sound2="sound5.mp3" data-sound3="sound6.mp3" data-property="color" data-value="blue">Sad</button>
+                <button class="answer" data-sound1="sound7.mp3" data-sound2="sound8.mp3" data-sound3="sound9.mp3" data-property="color" data-value="green">Excited</button>
             </div>
             <div class="question">
-                <p>2. Choose a tempo:</p>
-                <button class="answer" data-sound="sound4.mp3" data-property="speed" data-value="12">Fast</button>
-                <button class="answer" data-sound="sound5.mp3" data-property="speed" data-value="8">Moderate</button>
-                <button class="answer" data-sound="sound6.mp3" data-property="speed" data-value="4">Slow</button>
-            </div>
-            <div class="question">
-                <p>3. Choose an instrument:</p>
-                <button class="answer" data-sound="sound7.mp3" data-property="size" data-value="300">Piano</button>
-                <button class="answer" data-sound="sound8.mp3" data-property="size" data-value="240">Guitar</button>
-                <button class="answer" data-sound="sound9.mp3" data-property="size" data-value="180">Violin</button>
+                <p>2. How tired are you?</p>
+                <button class="answer" data-sound1="sound10.mp3" data-sound2="sound11.mp3" data-sound3="sound12.mp3" data-property="squareCount" data-value="1">Not tired</button>
+                <button class="answer" data-sound1="sound13.mp3" data-sound2="sound14.mp3" data-sound3="sound15.mp3" data-property="squareCount" data-value="2">A bit tired</button>
+                <button class="answer" data-sound1="sound16.mp3" data-sound2="sound17.mp3" data-sound3="sound18.mp3" data-property="squareCount" data-value="3">Very tired</button>
             </div>
         </div>
         <div id="controls" style="display: none;">
