--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
             width: 100%;
             height: 100%;
             z-index: -1;
+            display: none; /* Hide the canvas initially */
         }
     </style>
 </head>
@@ -29,15 +30,21 @@
         <div id="questions">
             <div class="question">
                 <p>1. Choose a mood:</p>
-                <button class="answer" data-sound1="sound1.mp3" data-sound2="sound2.mp3" data-sound3="sound3.mp3" data-value="red">Happy</button>
-                <button class="answer" data-sound1="sound4.mp3" data-sound2="sound5.mp3" data-sound3="sound6.mp3" data-value="blue">Sad</button>
-                <button class="answer" data-sound1="sound7.mp3" data-sound2="sound8.mp3" data-sound3="sound9.mp3" data-value="green">Excited</button>
+                <button class="answer" data-sound1="sound1.mp3" data-sound2="sound2.mp3" data-sound3="sound3.mp3" data-property="color" data-value="red">Happy</button>
+                <button class="answer" data-sound1="sound4.mp3" data-sound2="sound5.mp3" data-sound3="sound6.mp3" data-property="color" data-value="blue">Sad</button>
+                <button class="answer" data-sound1="sound7.mp3" data-sound2="sound8.mp3" data-sound3="sound9.mp3" data-property="color" data-value="green">Excited</button>
             </div>
             <div class="question">
-                <p>2. How tired are you?</p>
-                <button class="answer" data-value="1">Not tired at all</button>
-                <button class="answer" data-value="2">A bit tired</button>
-                <button class="answer" data-value="3">Exhausted</button>
+                <p>2. Choose an instrument:</p>
+                <button class="answer" data-sound1="sound10.mp3" data-sound2="sound11.mp3" data-sound3="sound12.mp3" data-property="size" data-value="300">Piano</button>
+                <button class="answer" data-sound1="sound13.mp3" data-sound2="sound14.mp3" data-sound3="sound15.mp3" data-property="size" data-value="240">Guitar</button>
+                <button class="answer" data-sound1="sound16.mp3" data-sound2="sound17.mp3" data-sound3="sound18.mp3" data-property="size" data-value="180">Violin</button>
+            </div>
+            <div class="question">
+                <p>3. How tired are you?</p>
+                <button class="answer" data-sound1="sound19.mp3" data-sound2="sound20.mp3" data-sound3="sound21.mp3" data-property="squares" data-value="1">Not tired at all</button>
+                <button class="answer" data-sound1="sound22.mp3" data-sound2="sound23.mp3" data-sound3="sound24.mp3" data-property="squares" data-value="2">A little tired</button>
+                <button class="answer" data-sound1="sound25.mp3" data-sound2="sound26.mp3" data-sound3="sound27.mp3" data-property="squares" data-value="3">Exhausted</button>
             </div>
         </div>
         <div id="controls" style="display: none;">
