--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,14 @@
             width: 100%;
             height: 100%;
             overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            background: #f0f0f0;
+        }
+        .container {
+            text-align: center;
         }
         #canvas {
             position: absolute;
@@ -21,6 +29,9 @@
             height: 100%;
             z-index: -1;
             display: none; /* Hide the canvas initially */
+        }
+        .question {
+            display: none;
         }
     </style>
 </head>
@@ -54,5 +65,7 @@
     </div>
 
     <canvas id="canvas"></canvas>
+    
+    <script src="script.js"></script>
 </body>
 </html>
