--- a/public/index.html
+++ b/public/index.html
@@ -41,9 +41,9 @@
         <div id="questions">
             <div class="question">
                 <p>1. Choose a mood:</p>
-                <button class="answer" data-sound1="sound1.mp3" data-sound2="sound2.mp3" data-sound3="sound3.mp3" data-property="color" data-value="rgba(255, 0, 0, 50)">Happy</button>
-                <button class="answer" data-sound1="sound4.mp3" data-sound2="sound5.mp3" data-sound3="sound6.mp3" data-property="color" data-value="rgba(0, 0, 255, 50)">Sad</button>
-                <button class="answer" data-sound1="sound7.mp3" data-sound2="sound8.mp3" data-sound3="sound9.mp3" data-property="color" data-value="rgba(0, 255, 0, 50)">Excited</button>
+                <button class="answer" data-sound1="sound1.mp3" data-sound2="sound2.mp3" data-sound3="sound3.mp3" data-property="color" data-value="red">Happy</button>
+                <button class="answer" data-sound1="sound4.mp3" data-sound2="sound5.mp3" data-sound3="sound6.mp3" data-property="color" data-value="blue">Sad</button>
+                <button class="answer" data-sound1="sound7.mp3" data-sound2="sound8.mp3" data-sound3="sound9.mp3" data-property="color" data-value="green">Excited</button>
             </div>
             <div class="question">
                 <p>2. Choose an instrument:</p>
