--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,10 @@
         <div id="questions">
             <div class="question">
                 <p>1. Choose a mood:</p>
-                <button class="answer" data-sound1="sound1.mp3" data-sound2="sound2.mp3" data-sound3="sound3.mp3" data-property="color" data-value="red">Happy</button>
-                <button class="answer" data-sound1="sound4.mp3" data-sound2="sound5.mp3" data-sound3="sound6.mp3" data-property="color" data-value="blue">Sad</button>
-                <button class="answer" data-sound1="sound7.mp3" data-sound2="sound8.mp3" data-sound3="sound9.mp3" data-property="color" data-value="green">Excited</button>
+                <button class="answer" data-sound1="sound1.mp3" data-sound2="sound2.mp3" data-sound3="sound3.mp3" data-property="color" data-value="red" data-initial-color="hsl(0, 100%, 50%)">Happy</button>
+                <button class="answer" data-sound4="sound4.mp3" data-sound5="sound5.mp3" data-sound6="sound6.mp3" data-property="color" data-value="blue" data-initial-color="hsl(240, 100%, 50%)">Sad</button>
+                <button class="answer" data-sound7="sound7.mp3" data-sound8="sound8.mp3" data-sound9="sound9.mp3" data-property="color" data-value="green" data-initial-color="hsl(120, 100%, 50%)">Excited</button>
+
             </div>
             <div class="question">
                 <p>2. Choose an instrument:</p>
