--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div id="controls" style="display: none;">
-            <button id="playSymphony">Play Symphony</button>
+            <button id="speedUpSquares">Speed Up Squares</button>
             <button id="stopSymphony">Stop Symphony</button>
         </div>
     </div>
