--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Symphony with Squares</title>
+    <title>Hear Yourself</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         body, html {
@@ -26,7 +26,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Create Your Symphony</h1>
+        <h1>hear Your Symphony</h1>
         <div id="questions">
             <div class="question">
                 <p>1. Choose a mood:</p>
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div id="controls" style="display: none;">
-            <button id="speedUpSquares">Speed Up Squares</button>
+            <button id="playSymphony">Play Symphony</button>
             <button id="stopSymphony">Stop Symphony</button>
         </div>
     </div>
