--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>hear Your Symphony</h1>
+        <h1>Hear Your Symphony</h1>
         <div id="questions">
             <div class="question">
                 <p>1. Choose a mood:</p>
