--- a/public/index.html
+++ b/public/index.html
@@ -47,10 +47,10 @@
                 <button class="answer" data-sound1="sound25.mp3" data-sound2="sound26.mp3" data-sound3="sound27.mp3" data-property="squares" data-value="3">Exhausted</button>
             </div>
         </div>
-        <div id="controls" style="display: none;">
+<!--         <div id="controls" style="display: none;">
             <button id="playSymphony">Play Symphony</button>
             <button id="stopSymphony">Stop Symphony</button>
-        </div>
+        </div> -->
     </div>
 
     <canvas id="canvas"></canvas>
