--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,10 @@
         <h1>Hear Your Symphony</h1>
         <div id="questions">
             <div class="question">
-                <p>1. Choose a mood:</p>
-                <button class="answer" data-sound1="sound1.mp3" data-sound2="sound2.mp3" data-sound3="sound3.mp3" data-property="color" data-value="red">Happy</button>
+                <p>How do you feel lately?</p>
+                <button class="answer" data-sound1="sound1.mp3" data-sound2="sound2.mp3" data-sound3="sound3.mp3" data-property="color" data-value="red">Anxious</button>
                 <button class="answer" data-sound1="sound4.mp3" data-sound2="sound5.mp3" data-sound3="sound6.mp3" data-property="color" data-value="blue">Sad</button>
-                <button class="answer" data-sound1="sound7.mp3" data-sound2="sound8.mp3" data-sound3="sound9.mp3" data-property="color" data-value="yellow">Excited</button>
+                <button class="answer" data-sound1="sound7.mp3" data-sound2="sound8.mp3" data-sound3="sound9.mp3" data-property="color" data-value="yellow">Content</button>
             </div>
             <div class="question">
                 <p>2. Choose an instrument:</p>
@@ -41,7 +41,7 @@
                 <button class="answer" data-sound1="sound16.mp3" data-sound2="sound17.mp3" data-sound3="sound18.mp3" data-property="size" data-value="180">Violin</button>
             </div>
             <div class="question">
-                <p>3. How tired are you?</p>
+                <p>3. How tired are you right now?</p>
                 <button class="answer" data-sound1="sound19.mp3" data-sound2="sound20.mp3" data-sound3="sound21.mp3" data-property="squares" data-value="1">Not tired at all</button>
                 <button class="answer" data-sound1="sound22.mp3" data-sound2="sound23.mp3" data-sound3="sound24.mp3" data-property="squares" data-value="2">A little tired</button>
                 <button class="answer" data-sound1="sound25.mp3" data-sound2="sound26.mp3" data-sound3="sound27.mp3" data-property="squares" data-value="3">Exhausted</button>
