--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,9 @@
         <div id="questions">
             <div class="question">
                 <p>How do you feel lately?</p>
-                <button class="answer" data-sound1="sound1.mp3" data-sound2="sound2.mp3" data-sound3="sound3.mp3" data-property="color" data-value="blue">Content</button>
+                <button class="answer" data-sound1="sound1.mp3" data-sound2="sound2.mp3" data-sound3="sound3.mp3" data-property="color" data-value="yellow">Content</button>
                 <button class="answer" data-sound1="sound4.mp3" data-sound2="sound5.mp3" data-sound3="sound6.mp3" data-property="color" data-value="red">Anxious</button>
-                <button class="answer" data-sound1="sound7.mp3" data-sound2="sound8.mp3" data-sound3="sound9.mp3" data-property="color" data-value="yellow">Lil Sad</button>
+                <button class="answer" data-sound1="sound7.mp3" data-sound2="sound8.mp3" data-sound3="sound9.mp3" data-property="color" data-value="blue">Lil Sad</button>
             </div>
             <div class="question">
                 <p>Hows the weather today</p>
