--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,9 @@
             </div>
             <div class="question">
                 <p>Hows the weather today</p>
-                <button class="answer" data-sound1="sound10.mp3" data-sound2="sound11.mp3" data-sound3="sound12.mp3" data-property="size" data-value="nice">Very nice :D</button>
-                <button class="answer" data-sound1="sound13.mp3" data-sound2="sound14.mp3" data-sound3="sound15.mp3" data-property="size" data-value="notbad">Not bad</button>
-                <button class="answer" data-sound1="sound16.mp3" data-sound2="sound17.mp3" data-sound3="sound18.mp3" data-property="size" data-value="bleh">Bleh :p</button>
+                <button class="answer" data-sound1="sound10.mp3" data-sound2="sound11.mp3" data-sound3="sound12.mp3" data-property="size" data-value="300">Very nice :D</button>
+                <button class="answer" data-sound1="sound13.mp3" data-sound2="sound14.mp3" data-sound3="sound15.mp3" data-property="size" data-value="240">Not bad</button>
+                <button class="answer" data-sound1="sound16.mp3" data-sound2="sound17.mp3" data-sound3="sound18.mp3" data-property="size" data-value="180">Bleh :p</button>
             </div>
             <div class="question">
                 <p>3. How tired are you right now?</p>
