--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
                 <button class="answer" data-sound1="sound16.mp3" data-sound2="sound17.mp3" data-sound3="sound18.mp3" data-property="size" data-value="180">Bleh :p</button>
             </div>
             <div class="question">
-                <p>3. How tired are you right now?</p>
+                <p>How tired are you right now?</p>
                 <button class="answer" data-sound1="sound19.mp3" data-sound2="sound20.mp3" data-sound3="sound21.mp3" data-property="squares" data-value="1">Well Awake</button>
                 <button class="answer" data-sound1="sound22.mp3" data-sound2="sound23.mp3" data-sound3="sound24.mp3" data-property="squares" data-value="2">Little Tired</button>
                 <button class="answer" data-sound1="sound25.mp3" data-sound2="sound26.mp3" data-sound3="sound27.mp3" data-property="squares" data-value="3">Sleeepy</button>
