--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body>
-    <img id="rat" src="https://example.com/rat.png" alt="Rat">
+    <img src="rat.png" id="rat" alt="Rat">
     <script src="script.js"></script>
 </body>
 </html>
