--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
         }
         #rat {
             position: absolute;
-            width: 100px;
+            width: 150px; /* Increased size by 50% */
             transition: transform 0.5s, left 1s linear, top 1s linear;
         }
     </style>
