--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     body {
         margin: 0;
         overflow: hidden;
+        transition: background-color 2s;
     }
     #rat {
         position: absolute;
