--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <img src="rat.png" id="rat" alt="Rat">
-<audio id="click-sound" src="click.mp3"></audio>
+<audio id="click-sound" src="cat sound.mp3"></audio>
 <script src="script.js"></script>
 </body>
 </html>
