--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
 <body>
 <img src="rat.png" id="rat" alt="Rat">
 <audio id="cat-sound" src="cat noise.mp3"></audio>
+<audio id="mouse-sound" src="mouse.mp3"></audio>
 <script src="script.js"></script>
 </body>
 </html>
